--- a/BlazorClient/Pages/Users/About.razor
+++ b/BlazorClient/Pages/Users/About.razor
@@ -11,14 +11,14 @@
 @inject IClubService _clubService
 
 <div class="main-info">
-    <div class="photo-card">
-        <Figure Size="FigureSize.Is256x256">
-            <FigureImage Source="/assets/images/User-photo.jpg" Style="border-radius: 2px" AlternateText="256x256"/>
-            <FigureCaption>
-                <Button Color="Color.Primary" Block="true" Class="edit-button" Outline="false" Clicked="@OnButtonClicked">Редактировать</Button>
-            </FigureCaption>
-        </Figure>
-    </div>
+    @* <div class="photo-card"> *@
+    @*     <Figure Size="FigureSize.Is256x256"> *@
+    @*         <FigureImage Source="/assets/images/User-photo.jpg"Class="Avatar" AlternateText="256x256"/> *@
+    @*         <FigureCaption> *@
+    @*             <Button Color="Color.Primary" Block="true" Class="edit-button" Outline="false" Clicked="@OnButtonClicked">Редактировать</Button> *@
+    @*         </FigureCaption> *@
+    @*     </Figure> *@
+    @* </div> *@
     <div class="info">
         <DisplayHeading Size="DisplayHeadingSize.Is2">
             @($"{_accountService.User.Name} {_accountService.User.Surname}")
